src: make code base JDK9 ready
Motivation:
evolution

Modification:
fix java9 warnings. Notice, that we do not require jdk9.

Result:
code can be compiled with jdk9 and jdk8 without warnings.

Acked-by: Al Rossi
Target: master